# quantbridge

./: .editorconfig  .env.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  NOTICE  QUANTBRIDGE_PRD.md  README.md  docker-compose.isolated.yml  docker-compose.yml  package.json
.gstack/experiments/phase-minus-1-drfx/: README.md  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260415_1606_create_users_and_strategies.py  20260416_0059_add_backtests_and_backtest_trades_tables.py  20260416_1343_convert_datetime_to_timestamptz.py  20260416_1458_create_ohlcv_hypertable.py  20260416_2206_create_trading_schema.py  20260417_1148_add_order_leverage_margin_mode.py  20260419_1200_sprint7d_okx_trading_sessions.py  20260421_0001_add_funding_rates_table.py  20260421_0002_add_backtest_idempotency_key.py  20260422_0925_remove_testnet_exchange_mode.py  20260424_0001_add_stress_tests_table.py  20260424_0002_add_backtest_idempotency_payload_hash.py  20260425_0001_add_user_country_code.py  20260425_0002_add_waitlist_table.py  20260503_0001_add_orders_dispatch_snapshot.py  20260504_0001_add_live_signal.py  20260504_0002_add_equity_curve.py  20260505_0001_add_backtest_config.py  20260507_0001_add_backtest_share_token.py  20260510_0001_add_cost_assumption_sensitivity_to_stress_test_kind.py  20260511_0001_add_param_stability_to_stress_test_kind.py  20260512_0001_add_optimization_runs_table.py  20260513_0001_add_bayesian_to_optimization_kind.py  20260514_0001_add_genetic_to_optimization_kind.py
backend/prometheus/: alerts.yml
backend/scripts/: bybit_demo_smoke.py  bybit_testnet_smoke.py  generate_corpus_ohlcv_frozen.py  pine_coverage_report.py  regen_trust_layer_baseline.py  run_auto_dogfood.py  smoke_sprint4.py
backend/src/: main.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/backtest/: __init__.py  config_mapper.py  dependencies.py  dispatcher.py  exceptions.py  models.py  monte_carlo.py  repository.py  router.py  schemas.py  serializers.py  service.py
backend/src/common/: alert.py  database.py  datetime_types.py  exceptions.py  grid_sweep.py  metrics.py  pagination.py  rate_limit.py  redis_client.py  redlock.py  security_headers.py  strict_decimal_input.py
backend/src/core/: config.py
backend/src/exchange/: __init__.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/health/: __init__.py  router.py
backend/src/market_data/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/optimizer/: __init__.py  dependencies.py  dispatcher.py  exceptions.py  models.py  repository.py  router.py  schemas.py  serializers.py  service.py
backend/src/scripts/: __init__.py  run_alembic_with_lock.py
backend/src/strategy/: __init__.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  trading_sessions.py
backend/src/stress_test/: __init__.py  dependencies.py  dispatcher.py  exceptions.py  models.py  repository.py  router.py  schemas.py  serializers.py  service.py
backend/src/tasks/: __init__.py  _worker_engine.py  _worker_loop.py  _ws_circuit_breaker.py  _ws_lease.py  backtest.py  celery_app.py  dogfood_report.py  funding.py  live_signal.py  market_data_backfill.py  optimizer_tasks.py  orphan_scanner.py  stress_test_tasks.py  trading.py  websocket_task.py
backend/src/trading/: __init__.py  dependencies.py  encryption.py  equity_calculator.py  exceptions.py  fees.py  funding.py  kill_switch.py  models.py  providers.py  registry.py  repository.py  router.py  schemas.py  service.py  webhook.py
backend/src/waitlist/: __init__.py  dependencies.py  email_service.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  token_service.py
backend/tests/: conftest.py  test_config.py  test_config_production_guard.py  test_conftest_sanity.py  test_health.py  test_main_lifespan_deprecated_warning.py  test_main_openapi_gating.py  test_main_security_headers.py  test_migrations.py
backend/tests/api/: test_backtests_cancel.py  (+7 more)
(+1164 files in other folders)
