[project]
name = "quantbridge-backend"
version = "0.0.1"
description = "QuantBridge — Pine Script 전략 백테스트/자동매매 플랫폼 (Backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "clerk-backend-api>=1.0.0",
    "anthropic>=0.39.0",
    "aioboto3>=13.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "vectorbt>=0.28,<0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4",
    "pandas-stubs>=2.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src"]
branch = true
