[project]
name = "quantbridge-backend"
version = "0.0.1"
description = "QuantBridge — Pine Script 전략 백테스트/자동매매 플랫폼 (Backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "clerk-backend-api>=1.0.0",
    "cryptography>=42.0.0",
    "anthropic>=0.39.0",
    "aioboto3>=13.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "vectorbt>=0.28,<0.29",
    "svix>=1.37.0",  # Clerk Webhook Svix 서명 검증
    "ccxt>=4.0.0",
    # Sprint 12 Phase C — Bybit V5 Private WebSocket (raw lib, 명시 dep)
    "websockets>=12,<17",
    "tenacity>=8.0.0",
    "pynescript==0.3.0",
    "prometheus-client>=0.21.0",
    # Sprint 11 Phase F — minor upgrade 범위 제한. 0.1.9 가 0.1.x 최신 (PyPI 확인 2026-04-25).
    # 0.2.x major 는 breaking 가능성 — Sprint 12+ 에서 별도 검토. `_RateLimitStateInitMiddleware`
    # (swallow_errors 경로 view_rate_limit 미설정 버그) 는 0.1.x 전반 유지 → workaround 존치.
    "slowapi>=0.1.9,<0.2",
    "watchfiles>=1.1.1",
    "scikit-optimize>=0.10.0,<0.11",
    "google-genai>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4",
    "pandas-stubs>=2.2.0",
    "psycopg2-binary>=2.9.0",  # Alembic migration round-trip 테스트용 (sync driver)
    "pyarrow>=24.0.0",
    "fakeredis[lua]>=2.20",
    "pytest-celery>=1.0",
    "pytest-timeout>=2.3",
    "pytest-json-report>=1.5,<2",  # Sprint 25 BL-114 — run_auto_dogfood.py JSON parse
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "mutation: Path β Mutation Oracle — nightly only (Stage 2c)",
  "real_broker: requires Bybit Demo API credentials (skip by default, run with --run-real-broker)",
  "integration: real-DB / real-Redis prefork smoke test — opt-in via --run-integration (Sprint 19 BL-085)",
]

[tool.coverage.run]
source = ["src"]
branch = true
